04/18/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Made some GUI tweaks to the splash screen.

04/08/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated support for different encodings. Now jsXe will support all
      encodings that the JVM being used supports. jsXe now opens documents
      properly by examining the files for UTF file markers or the encoding
      in the XML declaration. jsXe will now save files properly and write
      the correct encoding in the xml declaration.
    * Added built-in completion support for XML Schema, XHTML, XSLT, and XSL:FO

04/07/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a null menu item to the recent files menu for when there are
      no recent files in the list.
    * Added an option to allow the user to specify the line separator.

03/16/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Added a URI to the XMLDocument class to allow the XMLDocument to know
      where the document is located.
    * Added some framework for support introspection for built in document
      types.

02/06/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Updated to work with xerces 2.8.0

02/19/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Released 0.4 pre3
    * Fixed bug 143401802. BufferHistory now builds a dom and writes it out
      using DOMSerializer which ensures that the document will be well-formed
      and that special characters will be written out properly.
    * Fixed bug 1434017. The dirty files dialog wasn't closing the dialog
      properly when you save all the files.

02/17/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a bug where indeces weren't being kept properly when serializing a
      document that was larger than the write buffer size.

02/16/2006  Ian Lewis   <IanLewis@member.fsf.org>

    * Fixed a bug in AdapterNode that allowed you to remove the root document
      element node.
    * Added a copy method to AdapterNode to facilitate copying nodes during